fixing hero image on mobile to its relative posistion

--- a/src/App.css
+++ b/src/App.css
@@ -862,6 +862,9 @@ input[type="checkbox"] {
   /* } */
 @media only screen and (max-width: 475px) {
 
+  .heroSection {
+    position: relative;
+  }
  
   .hero--section--title {
     font-size: 35px;
